k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventmesh-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: eventmesh.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080

          - path: /api/events
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 8081

          - path: /api/bookings
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 8082
